# TurtleThread

./: .bumpversion.cfg  .gitignore  .readthedocs.yml  AUTHORS.rst  CNAME  Dockerfile  LICENSE  MANIFEST.in  README.md  create_test_eps.sh  index.html  pyproject.toml  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: build_docs.yml  release.yml  run_tests.yml
docs/: Makefile  api.rst  conf.py  index.po  index.rst  index_en.rst  installation.rst  installation_en.rst  make_docs.sh
docs/_static/css/: custom.css
docs/_templates/sections/: header-article.html
docs/figures/morse/: morse.afdesign
docs/locales/nb_NO/LC_MESSAGES/: api.po  authors.po  auto_examples.po  index.po  installation.po
docs/locales/no/LC_MESSAGES/: index.po
docs/manual_examples/en/: for.rst  fractal.rst  index.rst  randomness.rst  reflection_symmetry.rst  snowflake.rst  stitch_types.rst
docs/manual_examples/en/for/: 08.py
docs/manual_examples/en/fractal/: 01.py  03_0.py  03_4.py  04.py  gallery01_1.py  gallery01_2.py
docs/manual_examples/en/randomness/: 07.py  gallery02.py  gallery04.py
docs/manual_examples/en/reflection_symmetry/: gallery02.py
docs/manual_examples/en/snowflake/: 01.py  02.py  07.py  09.py  gallery02_full.py
docs/manual_examples/en/stitch_types/: 02.py  03.py  05.py  07.py  08.py  10.py  11.py
docs/manual_examples/nb_NO/: for.rst  fraktal.rst  sneflak.rst  speilsymmetri.rst  tilfeldighet.rst
docs/manual_examples/nb_NO/for/: 08.py
docs/manual_examples/nb_NO/fraktal/: 03_3.py  03_4.py  gallery03_2.py
docs/manual_examples/nb_NO/sneflak/: 05.py  gallery02.py
docs/manual_examples/nb_NO/speilsymmetri/: gallery02_full.py  gallery03.py
docs/manual_examples/nb_NO/sømmetyper/: 01.py  07.py
docs/manual_examples/nb_NO/tilfeldighet/: 03.py  04.py  gallery01.py  gallery03.py  gallery04.py
docs/source/: index.html
docs/source/en/: api.rst  index.rst  installation.rst  sg_execution_times.rst
docs/source/en/api/: index.rst  stitch_groups.rst  turtle.rst  visualisation.rst
docs/source/en/christmas/: randomness.rst  reflection_symmetry.rst
docs/source/en/intro/: for.rst  index.rst
docs/source/en/manual_examples/: index.rst
docs/source/nb_NO/: api.rst  index.rst  installation.rst  sg_execution_times.rst
docs/source/nb_NO/api/: index.rst  utils.rst
docs/source/nb_NO/christmas/: fractal.rst  index.rst  reflection_symmetry.rst  snowflake.rst
docs/source/nb_NO/intro/: index.rst  introduction.rst  stitch_types.rst
docs/source/nb_NO/manual_examples/: for.rst  index.rst  introduction.rst  speilsymmetri.rst  sømmetyper.rst
docs/turtlethread_sphinx_plugins/: manual_example_code_directive.py  turtlethread_gallery_scraper.py
examples/: gallery_introduction.py
examples/en/: gallery_hilbert.py  gallery_introduction.py  gallery_maurer_rose.py  gallery_schotter_line.py  gallery_sierpinsky_arrowhead.py
examples/nb_NO/: README.rst  firkantblomst.dst  gallery_hilbert.py  gallery_introduksjon.py  gallery_maurer_rose.py  gallery_morsekode.py  gallery_schotter_line.py  gallery_sierpinsky_arrowhead.py
examples/no/: gallery_introduksjon.py
main/: README
main/en/: .buildinfo  api.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
main/en/.doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  sg_execution_times.doctree
main/en/.doctrees/api/: index.doctree  stitch_groups.doctree  turtle.doctree  utils.doctree  (+1 more)
main/en/_modules/: index.html
main/en/_sources/: index.rst.txt  sg_execution_times.rst.txt
main/en/api/: index.html  stitch_groups.html  turtle.html  utils.html  visualisation.html
main/en/auto_examples/: gallery_hilbert.html  gallery_maurer_rose.html  gallery_schotter_line.html  gallery_sierpinsky_arrowhead.html  gallery_stotter_line.html  index.html  sg_execution_times.html
main/en/christmas/: fractal.html  index.html  randomness.html  reflection_symmetry.html  snowflake.html
main/en/intro/: for.html  index.html  introduction.html  morse.html  stitch_types.html
main/en/manual_examples/: for.html  fractal.html  index.html  introduction.html  randomness.html  reflection_symmetry.html  snowflake.html  stitch_types.html
main/nb_NO/: .buildinfo  api.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
main/nb_NO/.doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  sg_execution_times.doctree
main/nb_NO/_modules/: index.html
main/nb_NO/_sources/: index.rst.txt  sg_execution_times.rst.txt
main/nb_NO/_static/: documentation_options.js
main/nb_NO/api/: index.html  stitch_groups.html  turtle.html  utils.html  visualisation.html
main/nb_NO/auto_examples/: gallery_hilbert.html  gallery_introduksjon.html  gallery_maurer_rose.html  gallery_morsekode.html  gallery_schotter_line.html  gallery_sierpinsky_arrowhead.html  gallery_stotter_line.html  index.html  sg_execution_times.html
main/nb_NO/christmas/: fractal.html  index.html  randomness.html  reflection_symmetry.html  snowflake.html
main/nb_NO/intro/: for.html  index.html  introduction.html  morse.html  stitch_types.html
main/nb_NO/manual_examples/: for.html  fraktal.html  index.html  introduction.html  sneflak.html  speilsymmetri.html  sømmetyper.html  tilfeldighet.html
src/turtlethread/: __init__.py  base_turtle.py  draw_svg.py  fills.py  pattern_info.py  stitches.py  text.py  turtle.py  visualise.py
src/turtlethread/sphinx_plugins/: manual_example_code_directive.py  turtlethread_gallery_scraper.py
tests/: __init__.py  create_postscript.py  test_text.py  test_turtle.py  test_visualise.py
tests/visualise_postscript/: centered_cross.eps  centered_dot.eps  centered_line.eps  empty_scene.eps  flipped_orientation_test_text.eps  normal_orientation_test_text.eps  normal_orientation_test_text.exp  square_flower.eps  test_scene.eps  test_text.eps  test_text.exp
tests/visualise_postscript_old/: centered_dot.eps  test_scene.eps
(+289 files in other folders)
