[metadata]
name = turtlethread
keywords=turtlethread
version = 0.0.11
license = "GNU General Public License v3",
description = A Turtle-interface for making embroidery files
long_description = file: README.rst
long_description_content_type = text/markdown
author = Marie Roald & Yngve Mardal Moe
author_email = yngve.m.moe@gmail.com
url=https://github.com/marieroald/turtlethread
classifiers=
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    pyembroidery
    typing_extensions ; python_version < "3.11"

[options.packages.find]
where=src

[options.extras_require]
docs=
    sphinx>=5
    numpydoc
    sphinx-gallery
    sphinx_book_theme==0.3.3
    sphinx-toolbox
    matplotlib  # sphinx-gallery fails if matplotlib is not installed
    Jinja2>=3.0
dev=
    pytest
    black
    isort
    pytest-coverage
    pytest-randomly

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 120
